Performance improvements: changed LinkedList to ArrayList, changed loops from Iterator to simple counting (sometimes inverted). Good results, 1 or 2 minutes less.